Change Log
==========


2019-12-02 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* switching chat messages database from CodernityDB to sqlite3 (#454)



2019-11-26 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* set services/rebuilding/child-processes-enabled to "false" by default (#452)



2019-11-23 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bump twisted to 19.10.0 in requirements.txt



2019-11-23 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* more Android fixes (#449)
* idurl fix in service_private_messages()
* use Access-Control-Allow-Origin response header to protect REST HTTP Api (#448)



2019-11-08 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* built api_web_socket interface and added events to the web socket API  (#445)



2019-11-05 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* make possible to run RAID tasks inside a thread, not only inside a child process (#443)



2019-11-02 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* switching backup tar stream from pipe to in-memory buffer  (#440)



2019-10-29 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* moved local_tester from subprocess into thread (#438)
* few networking bug fixes (#437)



2019-10-24 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* new regression test approach with better data isolation (#431)
* automatic identity rotate, speed up automats, fixes
* implemented coverage report in regression tests
* added BITDUST_LOG_USE_COLORS environment variable
* more bug fixes in several state machines
* run a handshake when add a friend



2019-10-17 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* starting with WebSocket API interface
* IDURL bug fix in proxy_router() (#429)